# biodivine-aeon-client

./: .gitignore  .posthtmlrc  ARTEFACT_README.txt  Cargo.toml  Makefile  Makefile.toml  README.md  aeon-home.html  components.html  editor.html  explorer.html  font-test.html  index.html  machine_info.txt  manifest.json  package-lock.json  package.json  style.css  tree_explorer.html
aeon-wasm/: Cargo.toml
aeon-wasm/pkg/: aeon_wasm.d.ts  aeon_wasm.js  aeon_wasm_bg.wasm  aeon_wasm_bg.wasm.d.ts  package.json
aeon-wasm/src/: lib.rs
asset/font/: aeon-fonts.less
benchmarks/large/: Budding yeast (Irons)_Clb2_SFF_param.aeon  Budding yeast (Irons)_Clb2_param.aeon  Budding yeast (Irons)_Clb2_param_big.aeon  Budding yeast (Irons)_instantiated.aeon  Budding yeast (Irons)_parametric.aeon  Cell-Fate Decision_instantiated.aeon  Cell-Fate Decision_parametric.aeon  Cell-Fate Decision_parametric_small.aeon  Drosophila cell cycle_instantiated_oscillation.aeon  Drosophila cell cycle_instantiated_stable.aeon  Drosophila cell cycle_parametric.aeon  ERBB receptor-regulated G1_S_parametric.aeon  FGF Signalling pathway_instantiated.aeon  FGF Signalling pathway_parametric.aeon  Fission Yeast Cell Cycle_parametric.aeon  (+5 more)
font/: aeon-fonts.css
manual/: book.toml
model-viewer/: README.md  demo.html  style.css
script/: ComputeEngine.js  CytoscapeEditor.js  CytoscapeTreeEditor.js  Examples.js  LiveModel.js  ModelEditor.js  NativeBridge.js  Results.js  UI.js  config.js  const.js  explorerMain.js  main.js  patch-wasm.js  treeExplorerMain.js
src/: editor.html
style/: aeon.css  editor.css
(+92 files in other folders)
