[package]
name = "aeon-wasm"
version = "0.4.0"
authors = ["Samuel Pastva <sam.pastva@gmail.com>"]
edition = "2018"

[lib]
path = "src/rust/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
biodivine-lib-param-bn = { git = "https://github.com/sybila/biodivine-lib-param-bn.git" }
wasm-bindgen = "0.2.71"
json = "0.12.4"

[profile.release]
# Tell `rustc` to optimize for small code size.
# opt-level = "s"